# stakify-smart-contract

./: .gitignore  Beaker.toml  Cargo.toml  README.md  package-lock.json
.beaker/: state.json
.circleci/: config.yml
contracts/campaign/: Cargo.toml
contracts/campaign-factory/: Cargo.toml
contracts/campaign-factory/schema/: campaign-factory.json
contracts/campaign-factory/schema/raw/: execute.json  instantiate.json  response_to_config.json
contracts/campaign-factory/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/campaign-factory/src/tests/: env_setup.rs  integration_test.rs
contracts/campaign/schema/: campaign.json
contracts/campaign/schema/raw/: execute.json  instantiate.json  query.json  response_to_campaign.json
contracts/campaign/src/: contract.rs  contract_test.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/cw20-token/src/: contract.rs
deployment_scripts/: contract_setup.js  package-lock.json
deployment_scripts/config/: chain.js
schema/: campaign.json
schema/raw/: execute.json  query.json  response_to_campaign_info.json  response_to_nft_info.json  response_to_nft_staked.json  response_to_nfts.json
scripts/: build_contract.sh
ts/sdk/: package.json
